Fixed search button flickering

--- a/projects/banana-bonanza/css/style.css
+++ b/projects/banana-bonanza/css/style.css
@@ -19,6 +19,15 @@ body {
 	touch-action: none;
 }
 
+body::after {
+	position: absolute;
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	z-index: -1;
+	content: url(/images/banana.png) url(/images/excited_monkey.svg) url(/images/goofy_monkey.svg) url(/images/neutral_monkey.svg) url(/images/winking_monkey.svg);
+}
+
 #loading {
 	position: absolute;
 	top: 0;
